# morph-ml-sandbox

./: .gitignore  README.md  pyproject.toml
ml_sandbox/: __init__.py  classifier.py  dataset.py  models.py  train.py
morph-ml-sandbox/: __init__.py  classifier.py  dataset.py  train.py  utils.py
morph_ml_sandbox/: dataset.py  train.py
tests/: example.py  example_workflow.py  test_basics.py  test_classifier.py  test_images.py
