[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-sandbox"
version = "0.1.1"
description = "Galaxy morphology classification and machine learning sandbox"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "numpy",
    "torch",
    "scikit-learn",
    "scipy",
    "matplotlib"
]

[tool.setuptools]
packages = ["morph_ml_sandbox"]